Fix squished history circles on firefox

--- a/src/components/history/index.css
+++ b/src/components/history/index.css
@@ -102,7 +102,7 @@
     width: 250px;
   }
 
-  & a {
+  & a { /* stylelint-disable-line */
     text-decoration: none;
   }
 }
@@ -141,13 +141,15 @@
   .History-item {
     border: 6px solid rgba(197, 199, 255, 1);
     cursor: pointer;
-    flex: 0 0 83px;
-    height: 83px;
+    flex: 0 0 85px;
+    height: 85px;
     margin: 0;
+    min-height: 85px;
+    min-width: 85px;
     transform: scale(1);
     transform-origin: center center;
     transition: var(--transition-history);
-    width: 83px;
+    width: 85px;
 
     &:first-child {
       transform-origin: center left;
